--- a/layouts/partials/projectintro.html
+++ b/layouts/partials/projectintro.html
@@ -1,6 +1,7 @@
 <div class="project-container">
     <div class="project-header">
         <h1>{{.ctx.Page.Title}}</h1>
+        <h2 class="grey-text" style="text-align:center; margin-top: -2%">{{.ctx.Page.Params.Category}}</h2>
         <div class="role-tools-container">
             <div>
                 <h4>My Role</h4>
