--- a/static/style.css
+++ b/static/style.css
@@ -19,13 +19,18 @@ header {
 
 .section-header {
     font-size: 1.67em;
+    align-self: center;
 }
 
 .section-container {
     display: flex; 
     flex-direction: column; 
-    align-items: center; 
+    /* align-items: center; */
     padding: 5% 10% 5% 10%
+}
+
+.section-container img { 
+    align-self: center;
 }
 
 .insights {
@@ -53,13 +58,13 @@ svg {
 
 img {
     height: auto;
-    cursor: zoom-in;
+    /* cursor: zoom-in; */
 }
 
-img:active {
+/* img:active {
     -webkit-transform: scale(2);
     transform: scale(2);
-}
+} */
 
 .light-grey-background {
     background-color: #EEE;
