remove city pups, style project thumbnails, vw neustreet main img

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,42 +4,33 @@
 </p>
 
 <div class="projects">
-    <div class="projects-col">
-        <div class="project">
-            <a href="/neustreet" class="project">
-                {{ $image := resources.Get "neustreet.png" }}
-                <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
-            </a>
-            <p class="project-label">Neustreet
-                <span><br>Website<br><span>
-            </p>
-        </div>
-        <div class="project">
-            <a href="/highland_bikes" class="project">
-                {{ $image := resources.Get "highland_bikes.png" }}
-                <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
-            </a>
-            <p class="project-label">Highland Bikes
-                <span><br>Mobile App<br><span>
-            </p>
-        </div>
+    <div class="project">
+        <a href="/neustreet" class="project">
+            {{ $image := resources.Get "neustreet_X2.png" }}
+            <img  class="shadow" style="width: 80%; height:auto; border-radius: 5px" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+        </a>
+        <p class="project-label">Neustreet
+            <span><br>Website<br><span>
+        </p>
     </div>
-    <div class="projects-col">
+    <div class="project">
+        <a href="/highland_bikes" class="project">
+            {{ $image := resources.Get "highland_bikes.png" }}
+            <img class="shadow" style="width: 80%; height:auto; border-radius: 5px" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+        </a>
+        <p class="project-label">Highland Bikes
+            <span><br>Mobile App<br><span>
+        </p>
+    </div>
+    <div class="project">
         <a href="/seedAndSoil" class="project">
             {{ $image := resources.Get "seed_soil.png" }}
-            <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}"
+            <img class="shadow" style="width: 80%; height:auto; border-radius: 5px" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}"
                 alt="A mobile interface for a gardening app, with a calendar, plant list, articles, and community posts.">
         </a>
         <p class="project-label">Seed & Soil
             <span><br>Mobile App<br><span>
         </p>
-        <div class="project">
-            {{ $image := resources.Get "seed_soil.png" }}
-            <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
-            <p class="project-label">CityPups
-                <span><br>Website<br><span>
-            </p>
-        </div>
     </div>
 </div>
 <div class="experience light-grey-background">
