--- a/layouts/partials/wireflows.html
+++ b/layouts/partials/wireflows.html
@@ -1,4 +1,4 @@
-<div class="section-container">
+<div class="section-container light-grey-background">
     <p class="section-header">Wireflows</p>
     <p>The low-fidelity red routes were made into high-fidelity red routes using Figma. These versions utilized the
         input from user interviews from both the low-fidelity and high-fidelity prototypes. </p>
