--- a/layouts/_default/seedandsoil.html
+++ b/layouts/_default/seedandsoil.html
@@ -2,21 +2,18 @@
 {{ partial "projectintro" (dict "introContent" .Site.Data._seedandsoil.intro_content "ctx" .) }}
 {{ partial "problem" (dict "content" .Site.Data._seedandsoil.problem) }}
 {{ partial "goalsprocess" (dict "goals" .Site.Data._seedandsoil.goals "process" .Site.Data._seedandsoil.process) }}
-{{ partial "research" (dict "research" .Site.Data._seedandsoil.research) }}
-{{ partial "userresearch" (dict "userResearch" .Site.Data._seedandsoil.userResearch) }}
-{{ partial "insights" }}
-{{ partial "personas" }}
-{{ partial "defining" }}
-{{ partial "userstories" }}
-{{ partial "lowfidelityprototype" }}
-{{ partial "redroutes" }}
-{{ partial "highfidelityprototype" }}
-{{ partial "search" }}
-<div class="light-grey-background">
-    {{/* TODO SVG route graphics, html everything else */}}
-    {{ partial "wireflows" }}
-</div>
-{{ partial "styleguide" }}
-{{ partial "hifitestresults" }}
-{{ partial "reflection" }}
+{{ partialCached "research" (dict "research" .Site.Data._seedandsoil.research) }}
+{{ partialCached "userresearch" (dict "userResearch" .Site.Data._seedandsoil.userResearch) }}
+{{ partialCached "insights" . }}
+{{ partialCached "personas" . }}
+{{ partialCached "defining" . }}
+{{ partialCached "userstories" . }}
+{{ partialCached "lowfidelityprototype" . }}
+{{ partialCached "redroutes" . }}
+{{ partialCached "highfidelityprototype" . }}
+{{ partialCached "search" . }}
+{{ partialCached "wireflows" . }}
+{{ partialCached "styleguide" . }}
+{{ partialCached "hifitestresults" . }}
+{{ partialCached "reflection" . }}
 {{ end }}
