--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -68,7 +68,7 @@
     <h2>Want to get in touch?</h2>
     <p>Drop me a line if you have any questions!</p>
 
-    <form class="contact-form" method="POST" action="{{ .Site.Params.contactFormAction }}">
+    <form class="contact-form" method="POST" action="{{ .Site.Params.contactFormAction }}" data-netlify="true">
         <div style="display: flex;">
             <div class="form-group" style="margin-right: 5em">
                 <label for="name">Name</label>
