--- a/static/style.css
+++ b/static/style.css
@@ -73,7 +73,8 @@ img {
 .nav-menu {
     width: 30%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .nav-menu a {
