--- a/layouts/partials/neustreet/hifiprototype.html
+++ b/layouts/partials/neustreet/hifiprototype.html
@@ -23,7 +23,7 @@
         for podcasts because this is a tactic that Neustreet uses for onboarding potential customers. They wanted to
         highlight the newest podcasts on the front page, but it would all be organized under a separate media page. </p>
 
-    <p style="font-size: 1.25em; align-self: center">Desktop Homepage with Podcasts</p>
+    <p style="font-size: 1.25em; align-self: center">Desktop Prototype</p>
 
     <p>As mentioned in the beginning, the API page was removed so this no longer necessitated the use of a Data sample
         on the homepage. This allowed us to further emphasize the Data Insights page. A Contact Us CTA was added to the
@@ -33,19 +33,42 @@
         currently allocate funds for individual illustrations for every page.</p>
 
 
-    {{ $image := resources.Get "neustreet_hifi_2.png" }}
+    {{/* {{ $image := resources.Get "neustreet_hifi_2.png" }}
     <img style="width: 100%; margin-bottom: 5%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}"
-        height="{{ $image.Height }}" alt="">
+        height="{{ $image.Height }}" alt=""> */}}
 
-    <p style="font-size: 1.25em; align-self: center">Desktop Data Insights Page</p>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlYVnY8tzfQ9JM5w1yWAIEf%2FNeustreet-Desktop-Clickable-Prototype%3Ftype%3Ddesign%26node-id%3D1-1077%26t%3DKhZhgZ75tOQA9NI0-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A1077%26mode%3Ddesign"
+        allowfullscreen></iframe>
+
+
+    <p style="font-size: 1.25em; align-self: center">Tablet Prototype</p>
+
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fim1z8Nn9LbZUKq1VZIJb6z%2FNeustreet-iPad-11%2522-Clickable-Prototype%3Ftype%3Ddesign%26node-id%3D1-1465%26t%3DXWkhZpI4bc7VJnK2-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A1465%26mode%3Ddesign"
+        allowfullscreen></iframe>
+
+
+    <p style="font-size: 1.25em; align-self: center">Phone Prototype</p>
+
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F3z6Mdan8Ogk0LWwHzhSg9p%2FNeustreet-iPhone-14-Clickable-Prototype%3Ftype%3Ddesign%26node-id%3D1-160%26t%3DytN52OJkN1EI0c3G-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A160%26mode%3Ddesign"
+        allowfullscreen></iframe> 
+
+    {{/* <p style="font-size: 1.25em; align-self: center">Desktop Data Insights Page</p>
 
     <p style="margin-bottom: 5%;">The insights page got fleshed out and we decided on an AI-generated image of a shoe
         made up of data and
         technology. Graphs were hand-curated from our data to give potential customers an idea of what information they
-        could purchase from us. These graphs can be clicked on and expanded in a separate window. </p>
+        could purchase from us. These graphs can be clicked on and expanded in a separate window. </p> */}}
 
-    {{ $image := resources.Get "neustreet_hifi_3.png" }}
+    {{/* {{ $image := resources.Get "neustreet_hifi_3.png" }}
     <img style="width: 100%; margin-bottom: 5%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}"
-        height="{{ $image.Height }}" alt="">
+        height="{{ $image.Height }}" alt=""> */}}
+
+    {{/* <p style="font-size: 1.25em; align-self: center">Clickable Demos</p>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F3z6Mdan8Ogk0LWwHzhSg9p%2FNeustreet-iPhone-14-Clickable-Prototype%3Ftype%3Ddesign%26node-id%3D1-160%26t%3DytN52OJkN1EI0c3G-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A160%26mode%3Ddesign"
+        allowfullscreen></iframe> */}}
 
 </div>
