--- a/layouts/partials/wireflows.html
+++ b/layouts/partials/wireflows.html
@@ -5,16 +5,23 @@
 
     <p class="section-header" style="align-self: baseline; margin-bottom: -1%;">Red Route 1</p>
     <p class="grey-text" style="font-size: 1.25em">Save a plant profile and navigate to “saves” menu</p>
-    {{ $image := resources.Get "seed_and_soil_hifi_rr_1.png" }}
-    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+    {{/*  {{ $image := resources.Get "seed_and_soil_hifi_rr_1.png" }}
+    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">  */}}
+
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F1GlWv2oK6gKZnZmpIY2qHp%2FSeed-%2526-Soil-Flow-1-%2522Add-Plant%2522%3Ftype%3Ddesign%26node-id%3D1-1120%26t%3Dtqg9oADy58MvYYJy-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A1212%26mode%3Ddesign" allowfullscreen></iframe>
 
     <p class="section-header" style="align-self: baseline; margin-bottom: -1%;">Red Route 2</p>
     <p class="grey-text" style="font-size: 1.25em">Make a comment in the community forums</p>
-    {{ $image := resources.Get "seed_and_soil_hifi_rr_2.png" }}
-    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+    {{/*  {{ $image := resources.Get "seed_and_soil_hifi_rr_2.png" }}
+    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">  */}}
+
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9RfaPvU1SCEaYmND9uFgfu%2FSeed-%2526-Soil-Flow-3---%2522Add-a-Comment%2522%3Ftype%3Ddesign%26node-id%3D1-112%26t%3DNWCfsSH7VGzomcRa-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A112%26mode%3Ddesign" allowfullscreen></iframe>
+
 
     <p class="section-header" style="align-self: baseline; margin-bottom: -1%;">Red Route 3</p>
     <p class="grey-text" style="font-size: 1.25em">Add a plant to the calendar</p>
-    {{ $image := resources.Get "seed_and_soil_hifi_rr_3.png" }}
-    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+    {{/*  {{ $image := resources.Get "seed_and_soil_hifi_rr_3.png" }}
+    <img style="width: 100%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">  */}}
+
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fm9n1I1JxPFZMXE8bFNcc82%2FSeed-%2526-Soil-Flow-2-%2522Add-to-Calendar%2522%3Ftype%3Ddesign%26node-id%3D0-1241%26t%3DwxYoKAlKIZBmJc0H-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D0%253A1241%26mode%3Ddesign" allowfullscreen></iframe>
 </div>
