--- a/layouts/_default/neustreet.html
+++ b/layouts/_default/neustreet.html
@@ -57,4 +57,5 @@
 {{ partialCached "neustreet/hifiprototype" . }}
 {{ partialCached "neustreet/branding_and_design" . }}
 {{ partialCached "neustreet/conclusion" . }}
+{{ partialCached "neustreet/prototype" . }}
 {{ end }}
