add highland bikes clickable prototype

--- a/layouts/_default/highland_bikes.html
+++ b/layouts/_default/highland_bikes.html
@@ -106,13 +106,15 @@
     <p style="margin-bottom: 5%; width: 80%; align-self:center">After conducting the user tests for the low-fidelity
         prototype, I then moved on to implementing my findings into
         the creation of a high-fidelity prototype. </p>
-    {{ $image := resources.Get "highland_bikes_hifi.png" }}
+    {{/*  {{ $image := resources.Get "highland_bikes_hifi.png" }}
     <img style="width: 100%; margin-bottom: 5%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}"
-        height="{{ $image.Height }}" alt="">
+        height="{{ $image.Height }}" alt="">  */}}
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fp9SH7mJkb0LcnnOQe7iwF4%2FCapstone-Two%253A-High-Fidelity%3Ftype%3Ddesign%26node-id%3D5-1199%26t%3DT1XPLIx8ZAMQMmI3-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A240%26mode%3Ddesign" allowfullscreen></iframe>
+
 </div>
 
 
-<div class="section-container">
+{{/*  <div class="section-container">
     <p class="section-header">Wireflows</p>
     <p style="margin-bottom: 5%; width: 80%; align-self:center">The Wire flow for the high-fidelity prototype is a
         straightforward route from A to B. In the image below, the Wire flow goes from left to right, top to bottom. I
@@ -121,9 +123,9 @@
     {{ $image := resources.Get "highland_bikes_wireflow.png" }}
     <img style="width: 75%; margin-bottom: 5%;" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}"
         height="{{ $image.Height }}" alt="">
-</div>
+</div>  */}}
 
-<div class="section-container light-grey-background">
+<div class="section-container">
     <p class="section-header">UI Kit</p>
     <p style="margin-bottom: 5%; width: 80%; align-self:center">The above wireflow was made thanks to the eCommerce UI
         Kit created by Fively.</p>
@@ -133,7 +135,7 @@
 </div>
 
 
-<div class="section-container">
+<div class="section-container light-grey-background">
     <p class="section-header">Style Guide</p>
     <p style="margin-bottom: 2%;">I developed a limited style guide that would help the design of the mobile website
         stay consistent. It incorporates the fonts and colors that are found in the high-fidelity prototype.</p>
@@ -169,7 +171,7 @@
         Regular, 13 pt</p>
 </div>
 
-<div class="section-container light-grey-background">
+<div class="section-container">
     <p class="section-header">High-Fidelity Test Results</p>
     <p>To recap, I tested users on two different tasks for the mobile website during the user interviews. I wanted
         to make sure the flows made sense to users and that I successfully implemented the comparison feature. The
@@ -216,7 +218,7 @@
 </div>
 
 
-<div class="section-container">
+<div class="section-container light-grey-background">
     <p class="section-header">Reflection & Next Steps</p>
 
     <p>After doing one round of high-fidelity testing for the Highland Bikes mobile website and implementing the
